<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:padding="4dp"
        android:alignmentMode="alignBounds"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true"
        android:layout_above="@+id/logout_button">

        <LinearLayout
            android:id="@+id/homework_ll"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_homework"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_work"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/attendance_ll"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_attendance"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/attendance"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payment"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fees"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/announcement_ll"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_announcement"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notice"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/complaint_ll"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_complaint"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaints"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_beach_umbrella"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holidays"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingHorizontal="10dp"
            android:paddingBottom="4dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_econtent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_ll"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_marks"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marks"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_school"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="School"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>




    </GridLayout>
    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log Out"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>